--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-native-keychain": "8.1.2",
     "react-native-linear-gradient": "^2.8.0",
     "react-native-lottie-splash-screen": "^1.0.1",
-    "react-native-mail": "git+https://github.com/status-im/react-native-mail.git#refs/tags/v6.1.2-status",
+    "react-native-mail": "6.1.1",
     "react-native-navigation": "7.38.3",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-permissions": "3.8.0",
