--- a/.env.e2e
+++ b/.env.e2e
@@ -37,3 +37,4 @@ TEST_NETWORKS_ENABLED=1
 SHOW_NOT_IMPLEMENTED_FEATURES=1
 DELETE_MESSAGE_FOR_ME_UNDO_TIME_LIMIT=10000
 DELETE_MESSAGE_UNDO_TIME_LIMIT=10000
+ENABLE_ALERT_BANNER=0
