--- a/ios/StatusImTests/Info.plist
+++ b/ios/StatusImTests/Info.plist
@@ -26,6 +26,8 @@
 		<string>A00000080400010301</string>
 		<string>A000000151000000</string>
 	</array>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Play audio messages</string>
 	<key>NFCReaderUsageDescription</key>
 	<string>Enable Keycard</string>
 </dict>
