add NSAppleMusicUsageDescription permission to play audio messages to…
* add NSAppleMusicUsageDescription permission to play audio messages to the right plist file

* add NSAppleMusicUsageDescription update public string message

---------

Co-authored-by: Parvesh Monu <parvesh.dhullmonu@gmail.com>

--- a/ios/StatusIm/Info.plist
+++ b/ios/StatusIm/Info.plist
@@ -82,6 +82,8 @@
 	<string>Photos access is required to give you the ability to save images.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Photos access is required to give you the ability to send images.</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Status uses Media Library to save and send Images. The Media Library module internally requires permissions to Apple Music</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-Bold.otf</string>
