--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-native-image-crop-picker": "0.40.0",
     "react-native-image-resizer": "^1.2.3",
     "react-native-keychain": "8.1.2",
-    "react-native-linear-gradient": "^2.8.0",
+    "react-native-linear-gradient": "3.0.0-alpha.1",
     "react-native-lottie-splash-screen": "^1.0.1",
     "react-native-navigation": "7.39.0",
     "react-native-orientation-locker": "^1.5.0",
