--- a/.zprintrc
+++ b/.zprintrc
@@ -41,6 +41,7 @@
   "reg-fx"            :arg1-pair
   "testing"           :arg1-body
   "deftest-sub"       :arg1-body
+  "deftest-event"     :arg1-body
   "test-async"        :arg1-body
   "wait-for"          :arg1-body
   "with-deps-check"   :arg1-body
