--- a/test/appium/pytest.ini
+++ b/test/appium/pytest.ini
@@ -12,4 +12,6 @@ markers =
     testrail_case_id: case ID in testrail
     flaky: flaky tests for re-run if necessary
     transaction: all cases that are related to transaction completion in Ropsten network
-    new_ui_critical: PR tests in new UI
+    smoke: PR tests
+    nightly: nightly tests
+    secured: tests where SauceLabs session link is not posted in PR comments
