set fleet to status.staging
https://github.com/status-im/status-go/compare/1ef2434b...484b8aca

--- a/.env.e2e
+++ b/.env.e2e
@@ -2,7 +2,7 @@ DEBUG_WEBVIEW=1
 DEFAULT_NETWORK=goerli_rpc
 ETHEREUM_DEV_CLUSTER=1
 EXTENSIONS=0
-FLEET=status.prod
+FLEET=status.staging
 GROUP_CHATS_ENABLED=1
 LOG_LEVEL=debug
 MAILSERVER_CONFIRMATIONS_ENABLED=0
