--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -211,7 +211,7 @@ android {
             reset()
             enable getEnvOrConfig('ANDROID_ABI_SPLIT').toBoolean()
             include getEnvOrConfig('ANDROID_ABI_INCLUDE').split(";")
-            universalApk true
+            universalApk false
         }
     }
     signingConfigs {
