--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -38,10 +38,10 @@ KEYSTORE_PASSWORD=password
 KEYSTORE_ALIAS=status
 KEYSTORE_KEY_PASSWORD=password
 
-# By default we build a mostly universal APK
-ANDROID_ABI_SPLIT=false
-# Some platforms are excluded though
-ANDROID_ABI_INCLUDE=armeabi-v7a;arm64-v8a;x86;x86_64
+# Splitting by CPU Architecture produces smaller APKs.
+ANDROID_ABI_SPLIT=true
+# By default its better to only build apk for most recent devices.
+ANDROID_ABI_INCLUDE=arm64-v8a
 
 org.gradle.jvmargs=-Xmx8704M -XX:+UseParallelGC
 
