Add toggle in advanced settings for mobile data
https://github.com/status-im/status-go/compare/4a43b2b2...9755b3de
Co-authored-by: Andrea Maria Piana <andrea.maria.piana@gmail.com>

--- a/.env.e2e
+++ b/.env.e2e
@@ -38,3 +38,4 @@ SHOW_NOT_IMPLEMENTED_FEATURES=1
 DELETE_MESSAGE_FOR_ME_UNDO_TIME_LIMIT=10000
 DELETE_MESSAGE_UNDO_TIME_LIMIT=10000
 ENABLE_ALERT_BANNER=0
+MOBILE_DATA_SYNCING_TOGGLE_ENABLE=0
