--- a/.env.nightly
+++ b/.env.nightly
@@ -23,3 +23,4 @@ DELETE_MESSAGE_ENABLED=1
 FAST_CREATE_COMMUNITY_ENABLED=0
 TEST_NETWORKS_ENABLED=0
 ENABLE_ALERT_BANNER=1
+FLAG_WALLET_CONNECT_ENABLED=1
