drive stage from config
https://github.com/status-im/status-go/compare/a93c8572...1f7816dd

--- a/.env.release
+++ b/.env.release
@@ -19,4 +19,5 @@ MAX_IMAGES_BATCH=1
 DELETE_MESSAGE_ENABLED=1
 FAST_CREATE_COMMUNITY_ENABLED=0
 TEST_NETWORKS_ENABLED=0
+STATUS_PROXY_STAGE_NAME=prod
 FLAG_WALLET_CONNECT_ENABLED=1
