feat(wallet)_: Add PDF viewer screen to view ParaSwap TnC (#21437)
This commit:

- Adds a PDF viewer screen to view PDFs within the app instead of opening them on the system browser
- Updates the swap provider (ParaSwap) terms and conditions to be displayed within the app
- Increases APK size limit to 80 MB

Signed-off-by: Mohamed Javid <19339952+smohamedjavid@users.noreply.github.com>
Co-authored-by: Siddarth Kumar <siddarthkay@gmail.com>

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-lottie-splash-screen": "^1.0.1",
     "react-native-navigation": "7.39.0",
     "react-native-orientation-locker": "^1.5.0",
+    "react-native-pdf": "^6.7.5",
     "react-native-permissions": "4.1.5",
     "react-native-reanimated": "3.6.1",
     "react-native-redash": "18.1.0",
