chore(deps)_: get missing deps versions dynamically
To remove hardcoding of specific versions of missing gradle
dependencies, we will use `get_versions.sh` to fetch them dynamically.

Also disable default lint checks to remove redundant
`lintVitalReportRelease` task and dependency.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,10 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_17
     }
+    // Disable default lint checks to remove redundant lintVitalReportRelease task
+    lintOptions {
+        checkReleaseBuilds false
+    }
 
     // https://developer.android.com/studio/projects/install-ndk#vanilla_cmake
     externalNativeBuild {
