--- a/.env
+++ b/.env
@@ -36,3 +36,5 @@ SHOW_NOT_IMPLEMENTED_FEATURES=0
 ENABLE_ALERT_BANNER=0
 FLAG_WALLET_CONNECT_ENABLED=1
 API_LOGGING_ENABLED=1
+SENTRY_ENABLED=0
+SENTRY_ENVIRONMENT=ci-main
