--- a/.env.e2e
+++ b/.env.e2e
@@ -40,3 +40,5 @@ ENABLE_ALERT_BANNER=0
 FLAG_WALLET_CONNECT_ENABLED=1
 MOBILE_DATA_SYNCING_TOGGLE_ENABLE=0
 API_LOGGING_ENABLED=1
+SENTRY_ENABLED=0
+SENTRY_ENVIRONMENT=ci-main
