--- a/.env.jenkins
+++ b/.env.jenkins
@@ -37,3 +37,5 @@ TEST_NETWORKS_ENABLED=1
 ENABLE_ALERT_BANNER=1
 FLAG_WALLET_CONNECT_ENABLED=1
 API_LOGGING_ENABLED=1
+SENTRY_ENABLED=0
+SENTRY_ENVIRONMENT=ci-main
