--- a/.env.nightly
+++ b/.env.nightly
@@ -24,3 +24,5 @@ TEST_NETWORKS_ENABLED=0
 ENABLE_ALERT_BANNER=1
 FLAG_WALLET_CONNECT_ENABLED=1
 API_LOGGING_ENABLED=1
+SENTRY_ENABLED=1
+SENTRY_ENVIRONMENT=ci-nightly
