_TEMPORARY_ enabled all logging in release for testing purposes (#22192)

--- a/.env.release
+++ b/.env.release
@@ -2,7 +2,7 @@ DEBUG_WEBVIEW=0
 ETHEREUM_DEV_CLUSTER=0
 EXTENSIONS=0
 GROUP_CHATS_ENABLED=1
-LOG_LEVEL=
+LOG_LEVEL=debug
 MAILSERVER_CONFIRMATIONS_ENABLED=1
 MAINNET_WARNING_ENABLED=1
 PFS_ENCRYPTION_ENABLED=1
@@ -20,6 +20,6 @@ FAST_CREATE_COMMUNITY_ENABLED=0
 TEST_NETWORKS_ENABLED=0
 STATUS_PROXY_STAGE_NAME=prod
 FLAG_WALLET_CONNECT_ENABLED=1
-API_LOGGING_ENABLED=0
+API_LOGGING_ENABLED=1
 SENTRY_ENABLED=1
 SENTRY_ENVIRONMENT=production
