--- a/.env.release
+++ b/.env.release
@@ -2,7 +2,7 @@ DEBUG_WEBVIEW=0
 ETHEREUM_DEV_CLUSTER=0
 EXTENSIONS=0
 GROUP_CHATS_ENABLED=1
-LOG_LEVEL=
+LOG_LEVEL=error
 MAILSERVER_CONFIRMATIONS_ENABLED=1
 MAINNET_WARNING_ENABLED=1
 PFS_ENCRYPTION_ENABLED=1
