--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@react-native-community/netinfo": "^4.4.0",
     "@react-native-community/push-notification-ios": "^1.4.1",
     "@react-native-community/slider": "^3.0.0",
-    "@walletconnect/react-native-compat": "2.17.3",
     "@reown/walletkit": "^1.0.0",
+    "@walletconnect/react-native-compat": "2.17.3",
     "base-64": "^1.0.0",
     "big-integer": "1.6.51",
     "bignumber.js": "git+https://github.com/status-im/bignumber.js.git#refs/tags/v4.0.2-status",
@@ -56,6 +56,7 @@
     "react-native-keychain": "8.1.2",
     "react-native-linear-gradient": "3.0.0-alpha.1",
     "react-native-lottie-splash-screen": "^1.0.1",
+    "react-native-mmkv": "2.12.2",
     "react-native-navigation": "7.39.0",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-pdf": "^6.7.5",
