feat: integrate firebase sdk for ios and android (#21983)
This change re-introduces the Firebase SDK via a react-native library. This has been done to support remote notifications via push-notifications from Firebase Cloud Messaging. This initial integration supports receiving FCM notifications on both iOS and Android platforms.

This change also attempts to ensure that FDroid builds will not include Firebase or Google Play Services inside the build.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -339,3 +339,8 @@ task hemroidBuild(type: Exec) {
 preBuild.dependsOn hemroidBuild
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+def googleServicesConfigFile = "./googleServices.gradle";
+if (project.file(googleServicesConfigFile).exists()) {
+   apply from: file(googleServicesConfigFile)
+}
