--- a/ios/StatusIm/Info.plist
+++ b/ios/StatusIm/Info.plist
@@ -110,6 +110,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
+		<string>fetch</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>launch-image-universal</string>
