--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@react-native-community/netinfo": "^4.4.0",
     "@react-native-community/push-notification-ios": "^1.4.1",
     "@react-native-community/slider": "^3.0.0",
+    "@react-native-firebase/app": "^21.7.2",
+    "@react-native-firebase/messaging": "^21.7.2",
     "@reown/walletkit": "^1.0.0",
     "@walletconnect/react-native-compat": "2.17.3",
     "base-64": "^1.0.0",
