--- a/.env.jenkins
+++ b/.env.jenkins
@@ -29,7 +29,7 @@ COMMUNITIES_ENABLED=1
 COMMUNITIES_MANAGEMENT_ENABLED=1
 DELETE_MESSAGE_ENABLED=1
 TWO_MINUTES_SYNCING=1
-ENABLE_QUO_PREVIEW=1
+DEBUG_OR_PR_BUILD=1
 STICKERS_TEST_ENABLED=1
 LOCAL_PAIRING_ENABLED=1
 FAST_CREATE_COMMUNITY_ENABLED=1
