--- a/fastlane/Gemfile
+++ b/fastlane/Gemfile
@@ -1,4 +1,4 @@
 source 'https://rubygems.org'
 
 gem 'activesupport', '>= 6.1.7.3', '< 7.1.0'
-gem 'fastlane', '>= 2.131.0'
+gem "fastlane", ">= 2.228.0", "< 3.0"
